# manatee-open-ucnk

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.hh.in  configure  configure.ac
api/: Makefile.am  Makefile.in  addwcattr  common.i  compilecorp  concinfo  corpcheck  corpquery  corpquery.pl  decodevert  devirt  dumpalign  example.java  freqs  lslexarf  lsslex  manatee.i  manatee.pm  manatee.py  manatee_java_wrap.cc  manatee_pe_wrap.cc  manatee_py_wrap.cc  manatee_rb_wrap.cc  mksizes  mkstats  mksubc  par2tokens  parencodevert  tokens2dict
api/java/: AttrNotFound.java  CollocItems.java  ConcNotFound.java  Concordance.java  CorpInfo.java  CorpInfoNotFound.java  CorpRegion.java  Corpus.java  FastStream.java  FileAccessError.java  IDIterator.java  IntGenerator.java  IntVector.java  KWICLines.java  MLTStream.java  NGram.java  NGramIterator.java  NumVector.java  PosAttr.java  RangeStream.java  SWIGTYPE_p_NGram__lex_iter.java  SWIGTYPE_p_TokenLevel.java  SWIGTYPE_p_int.java  StrVector.java  Structure.java  SubCorpus.java  TextIterator.java  manatee.java  manateeJNI.java  map_int_sort_bigrams.java
concord/: Makefile.am  Makefile.in  conccrit.cc  conccrit.hh  concctx.cc  concedit.cc  concfreq.cc  concget.cc  concget.hh  concord.cc  concord.hh  concsave.cc  concsort.cc  concstat.cc  concstrm.cc  shuffle.patch
config/: ac_cxx_have_ext_hash_map.m4  ac_jni_include_dir.m4  ax_prefix_config_h.m4  ax_ruby_devel.m4  dpkg-control  py-compile
corp/: Makefile.am  Makefile.in  bgrstat.cc  calign.cc  corpconf.cc  corpconf.g  corpconf.hh  corpconf.tokens  corpconfLexer.cc  corpconfLexer.cpp  corpconfLexer.hh  corpconfLexer.hpp  corpconfParser.cc  corpconfParser.cpp  corpconfParser.hh  corpconfParser.hpp  corpstat.cc  corpus.cc  corpus.hh  dynattr.cc  dynattr.hh  dynfun.cc  dynfun.hh  excep.hh  langcodes.cc  levels.cc  levels.hh  loadconf.cc  pauniq.cc  pauniq.hh  posattr.cc  posattr.hh  regexopt.cc  regexopt.g  regexopt.hh  regexopt.tokens  regexoptLexer.cc  regexoptLexer.hh  regexoptParser.cc  regexoptParser.hh  (+12 more)
doc/: features  ske-stat.tex  subcdef.txt  virtdef.txt
libltdl/: Makefile  config.h  config.status  configure  libtool
query/: Makefile.am  Makefile.in  cqp.g  cqp.tokens  cqpLexer.cc  cqpLexer.cpp  cqpLexer.hh  cqpLexer.hpp  cqpParser.cc  cqpParser.cpp  cqpParser.hh  cqpParser.hpp  cqpTreeWalker.cc  cqpTreeWalker.cpp  cqpTreeWalker.g  cqpTreeWalker.hh  cqpTreeWalker.hpp  cqpeval.cc  cqpeval.hh  frconcat.cc  frsop.hh  frstream.cc  parsop.cc  parsop.hh  tstcqpgr.cc  tstcqpgr2.cc
src/: Makefile.am  Makefile.in  corpinfo.cc  dumpattrrev.cc  dumpattrtext.cc  dumplevel.cc  dumpstructrng.cc  dumpvirt.cc  encodevert.cc  lscbgr.cc  lsclex.cc  manateesrv.cc  mkalign.cc  mkdynattr.cc  mknorms.cc  mkregexattr.cc  mkvirt.cc  tstcqpgr.cc  tstcqpgr2.cc  tstregexopt.cc
